Request confirmation link

--- a/app/views/pages/saved.html.erb
+++ b/app/views/pages/saved.html.erb
@@ -1,4 +1,8 @@
 <p>Your request was saved.</p>
-<p>A validation mail was sent to you, please confirm you request within <%= pluralize(params["delay"], 'day') %> or your request will be closed.</p>
+<p>A validation mail was sent to you, please confirm you request within <%= pluralize(params["delay"], 'day') %> or your request will be canceled.</p>
+
+<div>
+  <%= link_to "Confirmation link", confirmation_path(key: params["key"]), method: :patch %>
+</div>
 
 <%= link_to "Make a new request", root_path, class: 'btn btn-primary' %>
