--- a/app/views/request_mailer/confirmation.text.erb
+++ b/app/views/request_mailer/confirmation.text.erb
@@ -1,6 +1,6 @@
 Request Validation
 Your request was saved but you have to confirm it now.
-Please note that this mail will become invalid after <%= pluralize(@reply_delay, 'day') %>.
+Please note that this mail will become invalid after <%= pluralize(@confirmation.reply_delay, 'day') %>.
 After this delay, your request will be automatically canceled.
 
 <%= link_to "Click here to confirm", confirmation_url(key: @confirmation.validation_key), class: 'btn btn-primary mt-3' %>
