Warning page for invalid validation key

--- a/app/views/request_mailer/confirmation.text.erb
+++ b/app/views/request_mailer/confirmation.text.erb
@@ -3,4 +3,4 @@ Your request was saved but you have to confirm it now.
 Please note that this mail will become invalid after <%= pluralize(@confirmation.reply_delay, 'day') %>.
 After this delay, your request will be automatically canceled.
 
-<%= link_to "Click here to confirm", confirmation_url(key: @confirmation.validation_key), class: 'btn btn-primary mt-3' %>
+<%= link_to "test", confirmation_url(key: @confirmation.validation_key) %>
