--- a/app/views/pages/validated.html.erb
+++ b/app/views/pages/validated.html.erb
@@ -1,2 +1,2 @@
 <p>Your request was successfully validated.</p>
-<p>We will contact you as soon as possible</p>
+<p>We will contact you as soon as possible.</p>
