--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
   </head>
 
   <body>
+    <div class="banner mb-5">
+      <div class="container">
+        <h1>CoWork Space</h1>
+        <p>Apply here and join us !</p>
+      </div>
+    </div>
     <div class="container">
       <%= yield %>
     </div>
