--- a/app/views/pages/validated.html.erb
+++ b/app/views/pages/validated.html.erb
@@ -1,2 +1,7 @@
-<p>Your request was successfully validated.</p>
-<p>We will contact you as soon as possible.</p>
+<div class="text-center">
+  <i class="far fa-check-circle"></i>
+  <div>
+    <p>Your request was successfully validated.</p>
+    <p>We will contact you as soon as possible.</p>
+  </div>
+</div>
