--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -9,6 +9,6 @@
       <%= f.input :bio, maxlength: @bio_max_length %>
       <span id="bio-max-length" data-bio-max-length="<%= @bio_max_length %>"></span>
     </div>
-    <%= f.submit "Validate", class: "btn btn-primary" %>
+    <%= f.submit "Validate", class: "btn btn-primary mt-3 w-100" %>
   <% end %>
 </div>
