--- a/app/views/pages/too_late.html.erb
+++ b/app/views/pages/too_late.html.erb
@@ -4,6 +4,6 @@
     <p>Sorry but your validation link has already expired and your request was canceled.</p>
     <p>You can make a new requets using the button below.</p>
 
-    <%= link_to "Make a new request", root_path, class: 'btn btn-primary' %>
+    <%= link_to "Make a new request", root_path, class: 'btn btn-primary mb-3' %>
   </div>
 </div>
