--- a/app/views/pages/invalid_key.html.erb
+++ b/app/views/pages/invalid_key.html.erb
@@ -5,6 +5,6 @@
     <p>If you copied/typed the url, please check your input.</p>
     <p>If you used the link, contact us or make a new request.</p>
 
-    <%= link_to "Make a new request", root_path, class: 'btn btn-primary' %>
+    <%= link_to "Make a new request", root_path, class: 'btn btn-primary mb-3' %>
   </div>
 </div>
